# ExploreOS

./: .gitignore  Cargo.toml  README.md  bochsrc  build_and_debug.sh  build_bootloader_debug.sh  debug_bootloader.sh  debug_kernel.sh  documentation.md  test.sh  test_bochs.sh  test_qemu.sh
bootloader/: Cargo.toml  build.rs  linker_script.ld
bootloader/.cargo/: config.toml
bootloader/src/: compiler_reqs.rs  disk.rs  disk_reading.asm  disk_reading.rs  main.rs  memory_manager.rs  panic.rs  real_mode.rs  rmgdt.asm  rust_asm_routines.asm  screen.rs  stage0.asm
bootloader/src/stage0/: disk_reading.asm  gdt.asm  stage0.asm
font/: generate_font_file.py
kernel/: Cargo.toml  kernel_virt_mem_map.txt  virt_mem_map.txt  virtual_memory_map.txt
kernel/.cargo/: config.toml
kernel/libraries/enum_bitflags/: Cargo.toml
kernel/libraries/enum_bitflags/src/: lib.rs
kernel/libraries/exclusive_cell/: Cargo.toml
kernel/libraries/ext2_parser/: Cargo.toml  test_ext2_1024.fs
kernel/libraries/ext2_parser/src/: lib.rs
kernel/libraries/producer_consumer/: Cargo.toml
kernel/libraries/producer_consumer/src/: lib.rs
kernel/src/: ext2.rs  gdt.rs  graphics_screen.rs  interrupts.rs  keyboard.rs  main.rs  memory_manager.rs  mouse.rs  panic.rs  pata.rs  process.rs  screen.rs  syscall.rs  text_terminal.rs  time.rs  tss.rs  userspace.rs  vfs.rs
kernel/src/interrupts/: pic_8259a.rs  pit_8254.rs
kernel/src/ps2/: command_queue.rs  controller.rs  keyboard.rs  mod.rs  mouse.rs
shared/boot_args/: Cargo.toml
shared/boot_args/src/: lib.rs
shared/compiler_reqs/: Cargo.toml
shared/compiler_reqs/src/: lib.rs
shared/cpu/: Cargo.toml
shared/cpu/src/: lib.rs
shared/elf_parser/: Cargo.toml
shared/elf_parser/src/: lib.rs
shared/enum_bitflags/src/: lib.rs
shared/exclusive_cell/: Cargo.toml
shared/exclusive_cell/src/: lib.rs
shared/ext2_parser/src/: lib.rs
shared/lock_cell/: Cargo.toml
shared/lock_cell/src/: lib.rs
shared/page_tables/: Cargo.toml
shared/page_tables/src/: lib.rs
shared/producer_consumer/: Cargo.toml
shared/producer_consumer/src/: lib.rs
shared/range_set/: Cargo.toml
shared/range_set/src/: lib.rs
shared/serial/: Cargo.toml
shared/serial/src/: lib.rs
shared/syscall_interface/: Cargo.toml
shared/syscall_interface/src/: lib.rs
src/: main.rs
userland/: Cargo.toml  aligned_segments.ld  build.sh  build_fs.sh  cat.c  ls.c  mount_fs.sh  shell.c  start.h  syscall.h  test_ext2.fs  unmount_fs.sh  utils.h
userland/.cargo/: config.toml
userland/fs/: test.txt
userland/src/: lib.rs  prelude.rs  syscalls.rs
