[package]
name = "bootloader"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2021"

[dependencies]
compiler_reqs = { path = "../shared/compiler_reqs" }
cpu = { path = "../shared/cpu" }
lock_cell = { path = "../shared/lock_cell" }
serial = { path = "../shared/serial" }
range_set = { path = "../shared/range_set" }
elf_parser = { path = "../shared/elf_parser" }
page_tables = { path = "../shared/page_tables" }
boot_args = { path = "../shared/boot_args" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
opt-level = "z"
lto = "fat"