[package]
name = "kernel"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2018"

[dependencies]
compiler_reqs = { path = "../shared/compiler_reqs" }
cpu = { path = "../shared/cpu" }
serial = { path = "../shared/serial" }
range_set = { path = "../shared/range_set" }
page_tables = { path = "../shared/page_tables" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = false
opt-level = 2
lto = "fat"
