[package]
name = "kernel"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2018"

[dependencies]
compiler_reqs = { path = "../shared/compiler_reqs" }
cpu = { path = "../shared/cpu" }
serial = { path = "../shared/serial" }
range_set = { path = "../shared/range_set" }
page_tables = { path = "../shared/page_tables" }
boot_args = { path = "../shared/boot_args" }
lock_cell = { path = "../shared/lock_cell" }
exclusive_cell = { path = "../shared/exclusive_cell" }
elf_parser = { path = "../shared/elf_parser" }
producer_consumer = { path = "../shared/producer_consumer" }
ext2_parser = { path = "../shared/ext2_parser" }

[profile.dev]
panic = "abort"
lto = "fat"
incremental = false

[profile.release]
panic = "abort"
debug = false
opt-level = 3
lto = "fat"
