[package]
name = "kernel"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2021"

[workspace]

[dependencies]
compiler_reqs = { path = "../shared/compiler_reqs" }
cpu = { path = "../shared/cpu" }
serial = { path = "../shared/serial" }
range_set = { path = "../shared/range_set" }
page_tables = { path = "../shared/page_tables" }
boot_args = { path = "../shared/boot_args" }
lock_cell = { path = "../shared/lock_cell" }
elf_parser = { path = "../shared/elf_parser" }
syscall_interface = { path = "../shared/syscall_interface" }
exclusive_cell = { path = "libraries/exclusive_cell" }
producer_consumer = { path = "libraries/producer_consumer" }
ext2_parser = { path = "libraries/ext2_parser" }

[profile.dev]
panic = "abort"
lto = "fat"
incremental = false

[profile.release]
panic = "abort"
debug = false
opt-level = 3
lto = "fat"