[package]
name = "userland"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_reqs = { path = "../shared/compiler_reqs" }
syscall_interface = { path = "../shared/syscall_interface" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"