[package]
name = "boot_args"
version = "0.1.0"
authors = ["Gal Horowitz <galush.horowitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
range_set = { path = "../range_set" }
serial = { path = "../serial" }